--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         function generateQrCode(){
             if(text.value.length > 0){
-                qrimage.sr="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=" + text.value;
+                qrimage.src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=" + text.value;
                 qrbox.classList.add("show-img");
             }else{
                 text.classList.add('error')
